src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_upsample_bicubic2d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);
value atg_upsample_bicubic2d_out(value out, value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg_upsample_bicubic2d_vec(value input, value output_size, int align_corners, value scale_factors);
value atg_upsample_bilinear2d(value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg_upsample_bilinear2d_backward(value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);
value atg_upsample_bilinear2d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);
value atg_upsample_bilinear2d_out(value out, value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg_upsample_bilinear2d_vec(value input, value output_size, int align_corners, value scale_factors);
value atg_upsample_bilinear2d_vec_out(value out, value input, value output_size, int align_corners, value scale_factors);
value atg_upsample_linear1d(value self, value output_size, int align_corners, value scales);
value atg_upsample_linear1d_backward(value grad_output, value output_size, value input_size, int align_corners, value scales);
value atg_upsample_linear1d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, int align_corners, value scales);
value atg_upsample_linear1d_out(value out, value self, value output_size, int align_corners, value scales);
value atg_upsample_linear1d_vec(value input, value output_size, int align_corners, value scale_factors);
value atg_upsample_nearest1d(value self, value output_size, value scales);
value atg_upsample_nearest1d_backward(value grad_output, value output_size, value input_size, value scales);
value atg_upsample_nearest1d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, value scales);
value atg_upsample_nearest1d_out(value out, value self, value output_size, value scales);
value atg_upsample_nearest1d_vec(value input, value output_size, value scale_factors);
value atg_upsample_nearest2d(value self, value output_size, value scales_h, value scales_w);
value atg_upsample_nearest2d_backward(value grad_output, value output_size, value input_size, value scales_h, value scales_w);
value atg_upsample_nearest2d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, value scales_h, value scales_w);
value atg_upsample_nearest2d_out(value out, value self, value output_size, value scales_h, value scales_w);
value atg_upsample_nearest2d_vec(value input, value output_size, value scale_factors);
value atg_upsample_nearest2d_vec_out(value out, value input, value output_size, value scale_factors);
value atg_upsample_nearest3d(value self, value output_size, value scales_d, value scales_h, value scales_w);
value atg_upsample_nearest3d_backward(value grad_output, value output_size, value input_size, value scales_d, value scales_h, value scales_w);
value atg_upsample_nearest3d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, value scales_d, value scales_h, value scales_w);
value atg_upsample_nearest3d_out(value out, value self, value output_size, value scales_d, value scales_h, value scales_w);
value atg_upsample_nearest3d_vec(value input, value output_size, value scale_factors);
value atg_upsample_trilinear3d(value self, value output_size, int align_corners, value scales_d, value scales_h, value scales_w);
value atg_upsample_trilinear3d_backward(value grad_output, value output_size, value input_size, int align_corners, value scales_d, value scales_h, value scales_w);
value atg_upsample_trilinear3d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, int align_corners, value scales_d, value scales_h, value scales_w);
value atg_upsample_trilinear3d_out(value out, value self, value output_size, int align_corners, value scales_d, value scales_h, value scales_w);
value atg_upsample_trilinear3d_vec(value input, value output_size, int align_corners, value scale_factors);
value atg_value_selecting_reduction_backward(value grad, int64_t dim, value indices, value sizes, int keepdim);
value atg_values(value self);
value atg_values_copy(value self);
value atg_values_copy_out(value out, value self);
value atg_vander(value x, value n, int increasing);
value atg_var(value self, int unbiased);
value atg_var_correction(value self, value dim, value correction, int keepdim);
value atg_var_correction_out(value out, value self, value dim, value correction, int keepdim);
value atg_var_dim(value self, value dim, int unbiased, int keepdim);
value atg_var_mean(value self, int unbiased);
value atg_var_mean_correction(value self, value dim, value correction, int keepdim);
value atg_var_mean_correction_out(value out0, value out1, value self, value dim, value correction, int keepdim);
value atg_var_mean_dim(value self, value dim, int unbiased, int keepdim);
value atg_var_out(value out, value self, value dim, int unbiased, int keepdim);
value atg_vdot(value self, value other);