src/bindings/torch_bindings_generated7.ml


  let stubs_upsample_bicubic2d_backward_grad_input =
    foreign
      "atg_upsample_bicubic2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bicubic2d_out =
    foreign
      "atg_upsample_bicubic2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bicubic2d_vec =
    foreign
      "atg_upsample_bicubic2d_vec"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bilinear2d =
    foreign
      "atg_upsample_bilinear2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bilinear2d_backward =
    foreign
      "atg_upsample_bilinear2d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bilinear2d_backward_grad_input =
    foreign
      "atg_upsample_bilinear2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bilinear2d_out =
    foreign
      "atg_upsample_bilinear2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bilinear2d_vec =
    foreign
      "atg_upsample_bilinear2d_vec"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bilinear2d_vec_out =
    foreign
      "atg_upsample_bilinear2d_vec_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_linear1d =
    foreign
      "atg_upsample_linear1d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_linear1d_backward =
    foreign
      "atg_upsample_linear1d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_linear1d_backward_grad_input =
    foreign
      "atg_upsample_linear1d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_linear1d_out =
    foreign
      "atg_upsample_linear1d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_linear1d_vec =
    foreign
      "atg_upsample_linear1d_vec"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest1d =
    foreign
      "atg_upsample_nearest1d"
      (gc_tensor @-> ptr int64_t @-> int @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest1d_backward =
    foreign
      "atg_upsample_nearest1d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest1d_backward_grad_input =
    foreign
      "atg_upsample_nearest1d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest1d_out =
    foreign
      "atg_upsample_nearest1d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest1d_vec =
    foreign
      "atg_upsample_nearest1d_vec"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest2d =
    foreign
      "atg_upsample_nearest2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest2d_backward =
    foreign
      "atg_upsample_nearest2d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest2d_backward_grad_input =
    foreign
      "atg_upsample_nearest2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest2d_out =
    foreign
      "atg_upsample_nearest2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest2d_vec =
    foreign
      "atg_upsample_nearest2d_vec"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest2d_vec_out =
    foreign
      "atg_upsample_nearest2d_vec_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest3d =
    foreign
      "atg_upsample_nearest3d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest3d_backward =
    foreign
      "atg_upsample_nearest3d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest3d_backward_grad_input =
    foreign
      "atg_upsample_nearest3d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest3d_out =
    foreign
      "atg_upsample_nearest3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_nearest3d_vec =
    foreign
      "atg_upsample_nearest3d_vec"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs_upsample_trilinear3d =
    foreign
      "atg_upsample_trilinear3d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_trilinear3d_backward =
    foreign
      "atg_upsample_trilinear3d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_trilinear3d_backward_grad_input =
    foreign
      "atg_upsample_trilinear3d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_trilinear3d_out =
    foreign
      "atg_upsample_trilinear3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_trilinear3d_vec =
    foreign
      "atg_upsample_trilinear3d_vec"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_value_selecting_reduction_backward =
    foreign
      "atg_value_selecting_reduction_backward"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_values = foreign "atg_values" (gc_tensor @-> returning raw_tensor)
  let stubs_values_copy = foreign "atg_values_copy" (gc_tensor @-> returning raw_tensor)

  let stubs_values_copy_out =
    foreign "atg_values_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_vander =
    foreign "atg_vander" (gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_var = foreign "atg_var" (gc_tensor @-> int @-> returning raw_tensor)

  let stubs_var_correction =
    foreign
      "atg_var_correction"
      (gc_tensor @-> ptr int64_t @-> int @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_var_correction_out =
    foreign
      "atg_var_correction_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> scalar
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_var_dim =
    foreign
      "atg_var_dim"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_var_mean =
    foreign "atg_var_mean" (ptr raw_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_var_mean_correction =
    foreign
      "atg_var_mean_correction"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> scalar
       @-> int
       @-> returning void)
  ;;

  let stubs_var_mean_correction_out =
    foreign
      "atg_var_mean_correction_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> scalar
       @-> int
       @-> returning void)
  ;;

  let stubs_var_mean_dim =
    foreign
      "atg_var_mean_dim"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_var_out =
    foreign
      "atg_var_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_vdot = foreign "atg_vdot" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
